--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,11 +2,13 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
 }
 
 body {
 	background-color: rgb(61, 74, 100);
-	color: #fff;
+	color: #e4f0ff;
 }
 
 text {
@@ -82,13 +84,28 @@ input:checked+.slider:before {
 	border-radius: 50%;
 }
 
-.legend-bullet {
-	width: 20px;
-	height: 20px;
-	background: #000;
-	border-radius: 200px;
-	display: inline-block;
-	margin: 0 0.5rem -4px 0;
+/***********************
+   LEGEND
+***********************/
+.legend {
+	list-style-type: none;
+
+	.legend-item {
+		margin: .5rem 0;
+
+		:hover {
+			color: #fff;
+		}
+	}
+
+	.legend-bullet {
+		width: 1rem;
+		height: 1rem;
+		background: #000;
+		border-radius: 200px;
+		display: inline-block;
+		margin: 0 0.5rem -4px 0;
+	}
 }
 
 @media only screen and (max-width: 1200px) {
