--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -147,16 +147,37 @@ input:checked+.slider:before {
 
 #leaflet-map {
 	height: 100vh;
-
+	font-family: Roboto;
 }
 
 .map-label {
-	font-size: 2em;
 	font-weight: 700;
 	color: slateblue;
-	margin: 0 -125px !important;
-	width: 250px !important;
 	text-align: center;
+	margin-top: -1em !important;
+	width: 200px;
+
+	>div {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		position: relative;
+		left: -50%;
+	}
+
+	.map-pin {
+		width: 20px;
+		height: 20px;
+		background: #337ad94f;
+		border-radius: 555px;
+		border: 3px solid steelblue;
+	}
+
+	.map-pin,
+	.map-label-text {
+		text-shadow: 1px 1px 2px rgba(199, 199, 212, 0.85);
+	}
 }
 
 /***********************
