Hide sunburst container on start

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -164,7 +164,7 @@ input:checked+.slider:before {
 	top: 0;
 	width: 100vw;
 	height: 100vh;
-	// transform: translateX(100vw);
+	transform: translateX(100vw);
 }
 
 /***********************
