--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -96,22 +96,22 @@ input:checked+.slider:before {
 	list-style-type: none;
 	background: #2b3548;
 	padding: .5rem 1rem;
-	border-radius: 1rem 0 0 1rem;
 	position: fixed;
 	top: 0;
 	right: 0;
-	margin: 1rem 0;
-	height: calc(100vh - 3rem);
+	margin: 0rem 0;
+	height: 100%;
 	width: 300px;
 	transition: transform .5s ease-in-out;
 
 
 
 	.sidebar-close {
+		color: #2b3548;
 		position: absolute;
-		top: 50%;
+		top: calc(50% - 30px);
 		left: -40px;
-		background: #3a9bcd;
+		background: #7ff6bd;
 		width: 40px;
 		height: 60px;
 		display: flex;
