--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-	background-color: rgb(61, 74, 100);
+	background-color: #3d4a64;
 	color: #e4f0ff;
 }
 
@@ -147,6 +147,32 @@ input:checked+.slider:before {
 	}
 }
 
+.footer,
+header {
+	position: absolute;
+	z-index: 600;
+	color: #afcff6;
+	text-align: center;
+	margin: 0;
+	width: 100%;
+	background: #2b3548;
+	padding: .5em 0;
+}
+
+header {
+	box-shadow: 0 6px 6px 0px #222d4240;
+
+	>h1 {
+		margin: 0;
+	}
+}
+
+.footer {
+	bottom: 0;
+	box-shadow: 0 -6px 6px 0px #222d4240;
+	text-transform: uppercase;
+}
+
 /***********************
    SUNBURST
 ***********************/
@@ -158,6 +184,7 @@ input:checked+.slider:before {
 }
 
 #sunburst-container {
+	overflow: hidden;
 	z-index: 25000;
 	background: #3c4962;
 	position: absolute;
@@ -218,5 +245,13 @@ input:checked+.slider:before {
 @media only screen and (max-width: 1000px) {
 	svg {
 		font-size: 6px;
+	}
+}
+
+@media only screen and (max-width: 650px) {
+	header {
+		h1 {
+			font-size: 1.3rem;
+		}
 	}
 }
